--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -3,6 +3,7 @@ import AuthorCard from '@/components/AuthorCard.astro';
 import Breadcrumbs from '@/components/Breadcrumbs.astro';
 import Container from '@/components/Container.astro';
 import GoodreadsGrid from '@/components/mdx/GoodreadsGrid.astro';
+import GoodreadsUserUpdates from '@/components/mdx/GoodreadsUserUpdates.astro';
 import Layout from '@/layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 
@@ -15,7 +16,7 @@ const authorsData = authors.map(author => ({
 ---
 
 <Layout title="About" description="A list of authors on this site.">
-  <Container class="flex flex-col gap-y-6">
+  <Container class="flex flex-col gap-y-6 lg:max-w-screen-lg">
     <Breadcrumbs items={[{ label: 'About', icon: 'lucide:users' }]} />
     {
       authorsData.length > 0 ? (
@@ -30,16 +31,31 @@ const authorsData = authors.map(author => ({
         <p class="text-center text-muted-foreground">No authors found.</p>
       )
     }
-    <h2 class="text-2xl font-bold">
-      <a
-        href="https://www.goodreads.com/review/list/152185079-sadman-hossain?shelf=read&sort=date_read&order=d"
-        target="_blank"
-        class="underline"
-        style="text-underline-offset: 5px;">
-          Latest Reads</a
-      >
-      <span class="text-muted-foreground">(Goodreads)</span>
-    </h2>
-    <GoodreadsGrid titleMarginTop={1} />
+    <div class="lg:flex lg:gap-4">
+      <div class="lg:w-1/4">
+        <h2 class="text-xl font-semibold text-gray-600 mb-3">
+          <a
+            href="https://www.goodreads.com/review/list/152185079-sadman-hossain?shelf=read&sort=date_read&order=d"
+            target="_blank"
+            class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium border bg-[#f9f6f2] text-[#723c0c] border-[#723c0c]/25 dark:bg-[#723c0c] dark:text-[#f9f6f2] dark:border-[#f9f6f2]/25"
+          >
+            Goodreads Activity
+          </a>
+        </h2>
+        <GoodreadsUserUpdates limit={10} />
+      </div>
+      <div class="lg:w-3/4 mt-8 lg:mt-0">
+        <h2 class="text-2xl font-bold">
+          <a
+            href="https://www.goodreads.com/review/list/152185079-sadman-hossain?shelf=read&sort=date_read&order=d"
+            target="_blank"
+            class="inline-flex items-center px-3 py-0.5 rounded-full text-md font-medium border bg-[#723c0c] text-[#f9f6f2] border-[#f9f6f2]/25 dark:bg-[#f9f6f2] dark:text-[#723c0c] dark:border-[#723c0c]/25"
+          >
+          Goodreads: Latest Reads
+          </a>
+        </h2>
+        <GoodreadsGrid titleMarginTop={2} />
+      </div>
+    </div>
   </Container>
 </Layout>
