fix(GoodreadsUserUpdates): missing slash in user profile image location

--- a/src/components/mdx/GoodreadsUserUpdates.astro
+++ b/src/components/mdx/GoodreadsUserUpdates.astro
@@ -240,7 +240,7 @@ const formatDate = (dateString: string) => {
                 <div class="flex items-start gap-2 mt-2">
                   {itemData.userUrl && (
                     <img 
-                      src="static/profile.jpg"
+                      src="/static/profile.jpg"
                       alt={`${itemData.userUrl}'s profile`} 
                       class="w-8 h-8 rounded-full"
                     />
@@ -300,7 +300,7 @@ const formatDate = (dateString: string) => {
                 <div class="flex items-start gap-2 mt-2">
                   {itemData.userUrl && (
                     <img 
-                      src="static/profile.jpg"
+                      src="/static/profile.jpg"
                       alt={`${itemData.userUrl}'s profile`} 
                       class="w-8 h-8 rounded-full"
                     />
